Fixed lateral navbar not opening on mobile devices. Minor fixes on mobile navbar

--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ article > img{
 }
 
 .economy_logo > img{
-    width: 15%;
+    width: 23%;
     margin: auto;
     padding-top: 1.4em;
     padding-bottom: 1.4em;
@@ -333,7 +333,7 @@ article > img{
 }
 
 .vinitaly_logo > img{
-    width: 30%;
+    width: 20%;
     margin: auto;
     padding-top: 1.4em;
     padding-bottom: 1.4em;
@@ -521,6 +521,10 @@ article > img{
         padding-top: 0;
     }
 
+    .sections_navbar{
+        padding-top: 10.5vh;
+    }
+
     .side_adv{
         height: max-content;
     }
@@ -566,7 +570,7 @@ article > img{
     }
 
     .economy_logo > img{
-        width: 20%;
+        width: 28%;
     }
 
     .a_macro-img > img{
@@ -692,11 +696,12 @@ article > img{
 
     #navbar_mobile_center > span{
         display: block;
-        min-width: 0;
+        width: 10%;
     }
 
     #navbar_mobile_center > div{
         flex: 1;
+        margin-left: -10%;
     }
 
     .join_us_mobile{
